--- a/adm/css/admin-custom.css
+++ b/adm/css/admin-custom.css
@@ -15,6 +15,17 @@
 }
 
 /* ========================================
+   공통 컴포넌트 스타일
+   ======================================== */
+
+/* 접근성을 위한 input 숨김 처리 */
+.hide-input {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
+/* ========================================
  * Layout / 공통(전역 사용)
  * ====================================== */
 body {
@@ -856,6 +867,7 @@ td .btn-group  {
 
 
 .info-card {
+  position: relative;
   background-color: var(--krds-color-light-gray-0);
   border: 1px solid var(--krds-color-light-gray-20);
   border-radius: var(--krds-radius-xlarge1);
@@ -1258,7 +1270,7 @@ td .btn-group  {
 .alert-box {
   display: flex;
   align-items: center;
-  width: 100%;
+  width: auto;
   gap: var(--krds-gap-3);
   padding: var(--krds-padding-4) var(--krds-padding-6);
   border-radius: var(--krds-radius-medium4);
@@ -1294,16 +1306,6 @@ td .btn-group  {
 
 
 
-/* ========================================
-   공통 컴포넌트 스타일
-   ======================================== */
-
-/* 접근성을 위한 input 숨김 처리 */
-.hide-input {
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-}
 
 /* ========================================
    Square Radio Button Component
@@ -1426,6 +1428,7 @@ td .btn-group  {
   border-color: var(--krds-color-light-primary-50);
   color: var(--krds-color-light-primary-60);
   font-weight:var(--c-font-weight-6);
+  background: var(--krds-light-color-background-white);
 }
 
 
@@ -1890,7 +1893,7 @@ main[class^="page"].board .conts-ft,
 }
 
 .page-edit.board .sub-label {
-  ont-size: var(--krds-pc-font-size-body-medium);
+  font-size: var(--krds-pc-font-size-body-medium);
 }
 
 
@@ -2095,10 +2098,6 @@ body:has(.main-bg) {
    height:calc(100% - 64rem);
    max-height:initial;
 }
-
-
-
-
 
 
 .main-header {
@@ -2309,10 +2308,36 @@ body:has(.main-bg) {
 }
 
 
+/* ========================================
+ * 회원가입 - 정보입력 signup
+ * ====================================== */
+
 .auth-page #container.join .inner {
   max-width:1000px;
 }
 
+.auth-page #container.join .inner {
+    max-width: 110rem;
+}
+.join .square-label {
+    padding: var(--krds-number-8) var(--krds-number-9);
+    border-color: var(--krds-color-light-gray-30);
+    background-color: var(--krds-color-light-gray-5);
+    color: var(--krds-color-light-gray-50);
+}
+
+.join .grade-select .square-label.first {
+    width: 37.6rem;
+}
+.join .kindergarten-type {
+    gap: var(--krds-number-5);
+}
+.join .kindergarten-type .square-label {
+    width: 12rem;
+}
+.join .grade-select.establish .square-label {
+   max-width: 22rem;
+}
 
 /* =========================================================
  * 섹션 헤더 (1, 2 단계 표시)
@@ -2453,13 +2478,6 @@ body:has(.main-bg) {
   padding: var(--krds-number-21);
   flex-direction: column;
   gap: var(--krds-gap-11);
-}
-
-.join .square-label {
-  padding: var(--krds-number-8) var(--krds-number-10);
-  border-color: var(--krds-color-light-gray-30);
-  background-color: var(--krds-color-light-gray-5);
-  color: var(--krds-color-light-gray-50);
 }
 
 .join .square-btn:checked + .square-label {
